# ray-tracer-implementation

./: .gitignore  CMakeLists.txt
src/tracer/: CMakeLists.txt  tracer_common.hpp
src/tracer/factory/: tuple_helpers.cpp  tuple_helpers.hpp
unit_tests/: CMakeLists.txt  test_tuples.cpp  unit_tests
